--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1,5 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="hello">Hello World, ParseStarterProjectActivity!</string>
-    <string name="app_name">ParseStarterProject</string>
+
+    <string name="app_name">anon</string>
+    <string name="email">Email Address</string>
+    <string name="password">Password</string>
+    <string name="log_me_in">Log me in!</string>
+    <string name="create_acct">Create new account</string>
+
 </resources>
