--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -4,7 +4,10 @@
     <string name="app_name">anon</string>
     <string name="email">Email Address</string>
     <string name="password">Password</string>
-    <string name="log_me_in">Log me in!</string>
-    <string name="create_acct">Create new account</string>
+    <string name="log_me_in">Log Me In!</string>
+    <string name="create_acct">Create New Account</string>
+    <string name="name">First and Last Name</string>
+    <string name="ok">OK!</string>
+    <string name="cancel">Cancel</string>
 
 </resources>
