--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="hello">Hello World, ParseStarterProjectActivity!</string>
+    <string name="message">Enter message...</string>
     <string name="app_name">ParseStarterProject</string>
+    <string name="button_send">Send</string>
 </resources>
