Added a confirm password text

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -4,6 +4,7 @@
     <string name="app_name">anon</string>
     <string name="email">Email Address</string>
     <string name="password">Password</string>
+    <string name="password_again">Confirm Password</string>
     <string name="log_me_in">Log Me In!</string>
     <string name="create_acct">Create New Account</string>
     <string name="name">First and Last Name</string>
