--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -13,6 +13,7 @@
     
     <string name="error_intro">"Please "</string>
     <string name="error_blank_username">enter a username</string>
+    <string name="error_blank_email">enter an email</string>
     <string name="error_invalid_email">enter a valid email</string>
     <string name="error_blank_password">enter a password</string>
     <string name="error_mismatched_passwords">enter a password</string>
