--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -9,6 +9,13 @@
     <string name="name">First and Last Name</string>
     <string name="ok">OK!</string>
     <string name="cancel">Cancel</string>
+
+    <string name="alert_name_clarification"><u>Why do you need this?</u></string>
+    <string name="alert_name_title">Why do we need your name?</string>
+    <string name="alert_name_text">While all of your posts and comments
+        are completely anonymous, other members in your group have the ability
+        to see who is in the group. To do this, we need your name. Your identity
+        will remain completely unknown at all other times!</string>
     
     <string name="error_intro">"Please "</string>
     <string name="error_blank_username">enter a username</string>
