--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -9,6 +9,11 @@
     <string name="name">First and Last Name</string>
     <string name="ok">OK!</string>
     <string name="cancel">Cancel</string>
+    <string name="create_new_group">Create New Group</string>
+    <string name="search_groups">Search Your Groups</string>
+    <string name="settings">Settings</string>
+    <string name="sign_out">Sign Out</string>
+    
     
     <string name="error_intro">"Please "</string>
     <string name="error_blank_username">enter a username</string>
