Allow user to be invited to a group

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -16,6 +16,8 @@
     <string name="group_name">Group Name</string>
     <string name="new_post">New Post</string>
     <string name="new_comment">New Comment</string>
+    <string name="new_user">New User</string>
+    <string name="enter_user_email">Enter User\'s Email Address</string>
 
     <string name="alert_name_clarification"><u>Why do you need this?</u></string>
     <string name="alert_name_title">Why do we need your name?</string>
